--- a/about.qmd
+++ b/about.qmd
@@ -13,7 +13,6 @@ about:
     - icon: github
       text: Github
       href: https://github.com
-
 ---
 
-About this blog
+This is such nice blog about machine learning with economics.
