--- a/about.qmd
+++ b/about.qmd
@@ -1,18 +1,22 @@
 ---
-title: "About"
-image: profile.jpg
-about:
-  template: jolla
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
-    - icon: github
-      text: Github
-      href: https://github.com
+title: "Carsten's AI Blog for Economists and Business Majors (coming soon)"
+listing:
+  contents: posts
+  sort: "date desc"
+  type: default
+  categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
+title-block-banner: true
 ---
 
-This is such nice blog about machine learning with economics.
+This book is still under construction.
+
+Soon, you will find here short articles about Machine Learning and Artificial Intelligence relevant for economists and business majors.
+
+Currently, you cannot subscribe. However, if you send me an email (clange@cpp.edu), I will add you manually to the subscription list.
+
+See you soon.
+
+Carsten Lange
